@@ -317,3 +317,5 @@ in 0.1.13.
 ------
 - MCMC sampling in GUI now plots parameter value vs step number, so you can
   see how many samples to burn
+- Fixed GUI crash when trying to make a snapshot with a name that has already
+  been used.
